# parallel-autodiff-experiment

./: .gitignore  CMakeLists.txt  autodiff_tuple.hpp  grad_array.hpp  jacobian.hpp  main.cpp  run_benchmark.sh
dependencies/autodiff/autodiff/forward/: forward.hpp
